# poland_challenge_demo2024

./: .gitignore
ann/algorithms/: clustering.hpp
ann/helpa/helpa/ref/: dot_ref.hpp  l2_ref.hpp
ann/nsg/: nndescent.hpp  nsg.hpp
ann/quant/: product_quant.hpp
ann/searcher/: graph_searcher.hpp
ann/simd/: prefetch.hpp
ann/storage/: tensor.hpp
libc/: CMakeLists.txt  ann.cpp
